--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@ body {
     background-color: fuchsia;
 }
 
+.square2 {
+    width: 50px;
+    height: 20vh;
+    background-color: green;
+}
+
 .red {
     background-color: red;
 }
