gsap timeline lesson

--- a/styles.css
+++ b/styles.css
@@ -2,30 +2,13 @@ body {
     margin: 0;
 }
 
-.div1, .div2 {
+.box {
+    width: 100px;
+    height: 100px;
+    background-color: blue;
+}
+
+.panel{
     height: 100vh;
-}
-
-.div1 {
     background-color: pink;
-}
-
-.div2 {
-    /* background-color: salmon; */
-}
-
-.square {
-    width: 50px;
-    height: 20vh;
-    background-color: fuchsia;
-}
-
-.square2 {
-    width: 50px;
-    height: 20vh;
-    background-color: green;
-}
-
-.red {
-    background-color: red;
 }
